--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url("https://firebasestorage.googleapis.com/v0/b/music-2b7e1.appspot.com/o/banner.jpg?alt=media&token=81bed5cf-2270-4d9c-9d57-c57efecdc872");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/music-2b7e1.appspot.com/o/wkbanner.jpg?alt=media&token=6e5adf8a-ca54-4c9a-8ba8-783d64152898");
     background-size: cover;
     background-position: top center;
     background-attachment: fixed;
